增加激活码功能，disable pep8的E501（一行代码不超过80）

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 						<div class="personal">
 							<dl class="user fr">
 								<dd>
-									{{ user.nick_name }}
+									{{ user.username }}
 									<img class="down fr" src="/static/images/top_down.png" />
 								</dd>
 								<dt>
@@ -44,7 +44,7 @@
 									</dt>
 									<dd>
 										<h2>django</h2>
-										<p>hi, {{ user.nick_name }}</p>
+										<p>hi, {{ user.username }}</p>
 									</dd>
 								</dl>
 								<div class="btn">
