--- a/templates/login.html
+++ b/templates/login.html
@@ -59,7 +59,7 @@
                         <a href="/login/">[登录]</a>
                     </li>
                     <li>
-                        <a href="register.html">[注册]</a>
+                        <a href="/register/">[注册]</a>
                     </li>
                 </ul>
             </div>
