--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
 						<div class="wp">
 							<ul>
 								<li class="active">
-									<a href="index.html">首页</a>
+									<a href="/">首页</a>
 								</li>
 								<li>
 									<a href="course-list.html">
@@ -110,7 +110,7 @@
 									<a href="teachers-list.html">授课教师</a>
 								</li>
 								<li>
-									<a href="org-list.html">授课机构</a>
+									<a href="/org/list/">授课机构</a>
 								</li>
 							</ul>
 						</div>
