--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+{% load staticfiles %}
 
 <head>
 	<meta charset="UTF-8">
@@ -101,7 +102,7 @@
 									<a href="/">首页</a>
 								</li>
 								<li>
-									<a href="course-list.html">
+									<a href="{% url 'course:course_list' %}">
 										公开课
 										<img class="hot" src="/static/images/nav_hot.png">
 									</a>
