--- a/templates/base.html
+++ b/templates/base.html
@@ -98,16 +98,16 @@
 								<li class="active">
 									<a href=" {% url 'index' %} ">首页</a>
 								</li>
-								<li class="active">
+								<li class="{% if request.path|slice:'7' == '/course' %}active{% endif %}">
 									<a href="{% url 'course:course_list' %}">
 										公开课
 										<img class="hot" src="{% static 'images/nav_hot.png' %}">
 									</a>
 								</li>
-								<li class="active">
+								<li class="{% if request.path|slice:'8' == 'teacher' %}active{% endif %}">
 									<a href="{% url 'org:teacher_list' %}">授课教师</a>
 								</li>
-								<li class="active">
+								<li class="{% if request.path|slice:'4' == '/org' %}active{% endif %}">
 									<a href="{% url 'org:org_list' %}">授课机构</a>
 								</li>
 							</ul>
