--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
 					<div class="nav">
 						<div class="wp">
 							<ul>
-								<li class="active">
+								<li class="{% if request.path == '/' %}active{% endif %}">
 									<a href=" {% url 'index' %} ">首页</a>
 								</li>
 								<li class="{% if request.path|slice:'7' == '/course' %}active{% endif %}">
@@ -104,10 +104,10 @@
 										<img class="hot" src="{% static 'images/nav_hot.png' %}">
 									</a>
 								</li>
-								<li class="{% if request.path|slice:'8' == 'teacher' %}active{% endif %}">
+								<li class="{% if request.path|slice:'12' == '/org/teacher' %}active{% endif %}">
 									<a href="{% url 'org:teacher_list' %}">授课教师</a>
 								</li>
-								<li class="{% if request.path|slice:'4' == '/org' %}active{% endif %}">
+								<li class="{% if request.path|slice:'9' == '/org/list' %}active{% endif %}">
 									<a href="{% url 'org:org_list' %}">授课机构</a>
 								</li>
 							</ul>
