--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -50,7 +50,7 @@
                                     </dd>
                                 </dl>
                                 <div class="btn">
-                                    <a class="personcenter fl" href="">进入个人中心</a>
+                                    <a class="personcenter fl" href="{% url 'logout' %}">进入个人中心</a>
                                     <a class="fr" href="{% url 'logout' %}">退出</a>
                                 </div>
                             </div>
