--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 						<div class="personal">
 							<dl class="user fr">
 								<dd>{{ user.username }}
-									<img class="down fr" src="{% static " /static/images/top_down.png " %}"/>
+									<img class="down fr" src="{% static 'images/top_down.png' %}" />
 								</dd>
 								<dt>
 									<img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.images }}" />
